iai-callgrind/tests/ui/test_binary_benchmark_bench_attribute_when_invalid.stderr
error: unexpected end of input, expected an expression
  --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:45:26
   |
45 |     #[bench::some(args = )]
   |                          ^

error: Expected 1 arguments but found 0

         = help: This argument is expected to have the same amount of parameters as the benchmark function

  --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:55:5
   |
55 |     #[binary_benchmark]
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `binary_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Expected 1 arguments but found 0

         = help: This argument is expected to have the same amount of parameters as the benchmark function

  --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:66:26
   |
66 |     #[bench::some(args = ())]
   |                          ^^

error: Expected 0 arguments but found 1

         = help: This argument is expected to have the same amount of parameters as the benchmark function

  --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:76:26
   |
76 |     #[bench::some(args = (1))]
   |                          ^^^

error: Expected 1 arguments but found 2

         = help: This argument is expected to have the same amount of parameters as the benchmark function

  --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:96:26
   |
96 |     #[bench::some(args = (1, 2))]
   |                          ^^^^^^

error: Expected 0 arguments but found 1

         = help: This argument is expected to have the same amount of parameters as the benchmark function

   --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:106:19
    |
106 |     #[bench::some(1)]
    |                   ^

error: Expected 2 arguments but found 1

         = help: This argument is expected to have the same amount of parameters as the benchmark function

   --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:116:19
    |
116 |     #[bench::some(1)]
    |                   ^

error: Expected 1 arguments but found 2

         = help: This argument is expected to have the same amount of parameters as the benchmark function

   --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:138:19
    |
138 |     #[bench::some(1, 2)]
    |                   ^

error[E0277]: the trait bound `InternalBinaryBenchmarkConfig: From<&str>` is not satisfied
 --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:4:5
  |
4 |     #[binary_benchmark]
  |     ^^^^^^^^^^^^^^^^^^^ the trait `From<&str>` is not implemented for `InternalBinaryBenchmarkConfig`
  |
  = help: the following other types implement trait `From<T>`:
            <InternalBinaryBenchmarkConfig as From<BinaryBenchmarkConfig>>
            <InternalBinaryBenchmarkConfig as From<&BinaryBenchmarkConfig>>
            <InternalBinaryBenchmarkConfig as From<&mut BinaryBenchmarkConfig>>
  = note: required for `&str` to implement `Into<InternalBinaryBenchmarkConfig>`
  = note: this error originates in the attribute macro `binary_benchmark` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `setup` in this scope
  --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:15:27
   |
15 |     #[bench::some(setup = setup())]
   |                           ^^^^^ not found in this scope

error[E0425]: cannot find function `setup` in this scope
  --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:25:27
   |
25 |     #[bench::some(setup = setup)]
   |                           ^^^^^ not found in this scope

error[E0425]: cannot find function `teardown` in this scope
  --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:35:30
   |
35 |     #[bench::some(teardown = teardown)]
   |                              ^^^^^^^^ not found in this scope

error[E0308]: mismatched types
  --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:86:27
   |
86 |     #[bench::some(args = (1))]
   |                           ^ expected `&str`, found integer
87 |     fn bench_binary(arg: &str) -> iai_callgrind::Command {
   |        ------------ arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:87:8
   |
87 |     fn bench_binary(arg: &str) -> iai_callgrind::Command {
   |        ^^^^^^^^^^^^ ---------

error[E0308]: mismatched types
   --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:128:19
    |
128 |     #[bench::some(1)]
    |                   ^ expected `&str`, found integer
129 |     fn bench_binary(arg: &str) -> iai_callgrind::Command {
    |        ------------ arguments to this function are incorrect
    |
note: function defined here
   --> tests/ui/test_binary_benchmark_bench_attribute_when_invalid.rs:129:8
    |
129 |     fn bench_binary(arg: &str) -> iai_callgrind::Command {
    |        ^^^^^^^^^^^^ ---------
